# test__rust-t4

./: .env  Cargo.toml  api.rest
migrations/: 20220629083044_init.sql
src/: app.rs  db.rs  lib.rs  scheduler.rs  server.rs  startup.rs
src/service/: data1_service.rs  data2_service.rs  mod.rs
