[package]
name = "rust-t4"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
clokwerk = "0.4.0-rc1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.137"
serde_json = "1.0.81"
sqlx = { version = "0.6.0", features = ["postgres", "runtime-actix-rustls"] }
tokio = { version = "1.19.2", features = ["full"] }

